fix: no hover effects on mobile

--- a/src/components/resume/ResumeButton.scss
+++ b/src/components/resume/ResumeButton.scss
@@ -12,7 +12,9 @@
     margin-bottom: 8px;
     width: 155px;
 
-    &:hover {
-        opacity: 0.7;
+    @media (hover: hover) {
+        &:hover {
+            opacity: 0.7;
+        }
     }
 }
